--- a/Базовые навыки психики.md
+++ b/Базовые навыки психики.md
@@ -26,8 +26,8 @@ Tags: #
 - Не оцениваем, не осуждаем, не судим, никого и ничто в нашей жизни и окружение, ни как хорошее ни как плохое. Если ваши рассуждения имют агресивную абстрактно навправленность, это ограничивает вас в кругозоре. 
 	- Англиский это отстой; Все русские алкаши; Никогда не понимал таких людей; То что я вот это сделал, это было не правильно; 
 	- `Никогда не говори никогда` 
-#### Сосрелаточеность на моменте
-- [[Поток]],[[Быть в моменте]], фокусировка без постороних вторжений других мыслей. Увлеченность.
+#### Сосредоточеность на моменте
+- [[Поток]],[[Быть в моменте]], фокусировка без посторонних вторжений других мыслей. Увлеченность.
 </br>
 
 #### Эффективное мышление
@@ -48,6 +48,10 @@ Tags: #
 	- Переживайте эмоцию до конца, не избегая ее. Не выносимые и пугающие мысли. 
 	- Психическая вовлеченость. Осознаность. Mindfulness
 	- Чего я хочу?
+
+- Что я чувствую? Описать какой формы, цвета, запаха
+- Нравится ли мне это? Не навязываемые мне чувства что я переживаю? Что я могу сделать что бы почувствовать себя счастливым прямо сейчас? Что чувствует мой собеседник?
+- 
 </br>
 ---
 ###### zero-link </br>
