--- a/Бессознательное Подсознание.md
+++ b/Бессознательное Подсознание.md
@@ -19,7 +19,7 @@ Tags: #
 
 **Неокортекс** — часть мозга, благодаря которой мы мыслим, познаём, считываем сигналы из внешней среды. И процессы в этой части мозга сжирают энергию в разы больше других его отделов.
 
-- юбопытно, что скорость передачи сигналов через эмоциональный мозг (лимбическую систему) гораздо выше, чем через неокортекс. Иными словами, **мозг делает выбор быстрее, чем ты о нём узнаёшь.**
+- любопытно, что скорость передачи сигналов через эмоциональный мозг (лимбическую систему) гораздо выше, чем через неокортекс. Иными словами, **мозг делает выбор быстрее, чем ты о нём узнаёшь.**
 
 
 
