--- a/Быть в моменте.md
+++ b/Быть в моменте.md
@@ -31,14 +31,20 @@ Tags: #
 Получение удовольствия от процесса
 
 # Признаки
-1. Реальная жизнь — сейчас. Никакого будущего и прошлого нет. Есть воспоминания (которые на самом деле — картинки в голове) и попытки предсказать будущее (тоже воображаемые картинки).
-	- Толле пишет: «Ощущал ли ты когда-нибудь, делал ли, думал ли или чувствовал что-нибудь вне момента Сейчас? Считаешь ли ты, что когда-нибудь будешь на это способен? Может ли что-либо происходить или быть за пределами момента Сейчас? Ответ очевиден, не правда ли? Ничего не происходило в прошлом — все происходило в момент Сейчас. Ничего не произойдет в будущем — все произойдет в момент Сейчас.
-	- То, о чем ты думаешь как о прошлом, — это лишь след в памяти твоего ума, след минувшего момента Сейчас. Когда ты вспоминаешь о прошлом, то реактивируешь след в памяти — сейчас ты поступаешь именно так. Будущее — это воображаемый настоящий момент, проекция ума. Когда будущее наступает, то оно наступает как настоящий момент. Когда ты размышляешь о будущем, ты делаешь это сейчас. Прошлое и будущее со всей очевидностью не имеют собственной реальности, они могут лишь отражать свет солнца, и, стало быть, прошлое и будущее — это только слабое отражение света, силы и реальности вечного присутствия. Их реальность „заимствована“ у настоящего момента».
-2. Западный человек слишком много думает, в то время как жизнь надо не думать — а проживать. Хватит, дескать, думать о музыке: музыку можно слушать; и зачем говорить «мед» — когда можно просто его поесть.
-	- «Более того, привычка к размышлению, которую поощряет наше нарциссическое общество, на самом деле может ухудшить ситуацию. Исследования с помощью Выборочного Изучения Опыта показывают, что когда люди думают о себе, их настроение обычно негативно. Когда человек начинает размышлять, не имея для этого специальных навыков, первые мысли, которые возникают в его сознании, обычно бывают депрессивными. Если в состоянии потока мы забываем о себе, то в состоянии апатии, беспокойства или скуки наше „эго“ обычно выходит на передний план. Поэтому если мы не владеем мастерством размышлений, занятие „размышлениями над проблемами“ обычно ухудшает ситуацию вместо того, чтобы ее облегчить», — пишет Михай Чиксентмихайи.
-3. Давайте все жить в потоке/моменте, это избавит от всех тревог и печалей.
+ ### Реальная жизнь — сейчас. 
 
-# Критика
+^9cf3df
+
+ Никакого будущего и прошлого нет. Есть воспоминания (которые на самом деле — картинки в голове) и попытки предсказать будущее (тоже воображаемые картинки).
+ - Толле пишет: «Ощущал ли ты когда-нибудь, делал ли, думал ли или чувствовал что-нибудь вне момента Сейчас? Считаешь ли ты, что когда-нибудь будешь на это способен? Может ли что-либо происходить или быть за пределами момента Сейчас? Ответ очевиден, не правда ли? Ничего не происходило в прошлом — все происходило в момент Сейчас. Ничего не произойдет в будущем — все произойдет в момент Сейчас.
+ - То, о чем ты думаешь как о прошлом, — это лишь след в памяти твоего ума, след минувшего момента Сейчас. Когда ты вспоминаешь о прошлом, то реактивируешь след в памяти — сейчас ты поступаешь именно так. Будущее — это воображаемый настоящий момент, проекция ума. Когда будущее наступает, то оно наступает как настоящий момент. Когда ты размышляешь о будущем, ты делаешь это сейчас. Прошлое и будущее со всей очевидностью не имеют собственной реальности, они могут лишь отражать свет солнца, и, стало быть, прошлое и будущее — это только слабое отражение света, силы и реальности вечного присутствия. Их реальность „заимствована“ у настоящего момента».
+
+### Человек слишком много думает, в то время как жизнь надо не думать — а проживать. 
+Хватит, дескать, думать о музыке: музыку можно слушать; и зачем говорить «мед» — когда можно просто его поесть.
+- «Более того, привычка к размышлению, которую поощряет наше нарциссическое общество, на самом деле может ухудшить ситуацию. Исследования с помощью Выборочного Изучения Опыта показывают, что когда люди думают о себе, их настроение обычно негативно. Когда человек начинает размышлять, не имея для этого специальных навыков, первые мысли, которые возникают в его сознании, обычно бывают депрессивными. Если в состоянии потока мы забываем о себе, то в состоянии апатии, беспокойства или скуки наше „эго“ обычно выходит на передний план. Поэтому если мы не владеем мастерством размышлений, занятие „размышлениями над проблемами“ обычно ухудшает ситуацию вместо того, чтобы ее облегчить», — пишет Михай Чиксентмихайи.
+- Давайте все жить в потоке/моменте, это избавит от всех тревог и печалей.
+
+## Критика:
 - Всё принять — это не возможно!
 - «да это же всё — сраные хиппи!» Как это «не заботиться о будущем»? 
 - «Копирка Дейла Карнеги с приправой „духовности“. Суть этой книги — стань инфузорией-туфелькой, не помни о прошлом, не мечтай о будущем, живи в забвении», — действительно, а куда, спрашивается, деть умище?
