--- a/КПТ.md
+++ b/КПТ.md
@@ -5,7 +5,7 @@ Tags: #
 # Когнитивно-поведенческая психотерапия
 - Когнитивно-поведенческая психотерапия эффективна при самых различных психических расстройствах и представляет собой краткосрочное, сфокусированное на навыках лечение, направленное на изменение неадаптивных эмоциональных реакций при помощи изменения [[Бессознательное Подсознание]] мыслей, изменения поведения пациента либо изменения того и другого.
 - КПТ является терапией выбора при многих психических расстройствах
-- Когнитивный подход исходит из предположения, что психологические проблемы и нервно-психические расстройства вызваны нелогичными или нецелесообразными мыслями и убеждениями человека, а также дисфункциональными стереотипами его мышления, изменив которые, можно изменить эмоции и поведение и таким образом решить проблемы.
+- Когнитивный подход исходит из предположения, что психологические проблемы и нервно-психические расстройства вызванные нелогичными или нецелесообразными мыслями и убеждениями человека, а также дисфункциональными стереотипами его мышления, изменив которые, можно изменить эмоции и поведение и таким образом решить проблемы.
 - Эффективна, в частности, так называемая [экспозиция](https://ru.wikipedia.org/wiki/%D0%AD%D0%BA%D1%81%D0%BF%D0%BE%D0%B7%D0%B8%D1%86%D0%B8%D1%8F_(%D0%BF%D1%81%D0%B8%D1%85%D0%BE%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B8%D1%8F) "Экспозиция (психотерапия)") к беспокойству (разновидность когнитивно-поведенческой терапии, в ходе которой пациенты создают у себя живые мысленные образы пугающих ситуаций, связанные с наиболее тревожными для них мыслями, пытаясь представить себе худший вариант событий, и удерживают эти образы перед мысленным взором как минимум 25—30 минут, а затем пытаются представить как можно больше альтернатив пугающему варианту развития ситуации. При регулярном использовании этой техники уровень испытываемой пациентом тревоги постепенно снижается
 
 </br>
