--- a/Мозг потенциал.md
+++ b/Мозг потенциал.md
@@ -8,7 +8,7 @@ Tags: #
 1. [[Чтение]]
 2. [[Координация - Движение]]
 3. [[Координация - Танцы]]
-4. [[Музыка]] 
+4. [[Координация и слух - Музыка]] 
 5. 
 
 
