--- a/Нейрон.md
+++ b/Нейрон.md
@@ -3,13 +3,22 @@ Tags: #
 
 ---
 # Title
-- Каждый нейрон состоит из одного аксона, тела (перикариона) и нескольких дендритов, в зависимости от числа которых нервные клетки делятся на униполярные, биполярные или мультиполярные.
+- Каждый нейрон состоит из одного аксона, тела (перикариона) и N-кол-во дендритов, в зависимости от числа которых нервные клетки делятся. Аксоны дают коллатерали (утолщаются).
+- Тонкие аксоны расходуют меньше энергии и метаболических веществ для проведения потенциала действия, но толстые аксоны позволяют проводить его быстрее.
+- 1 нейрон может иметь до 20тыс. связей с другими нейронами.
+- Более быстро и менее энергозатратно, нейроны могут использовать для покрытия аксонов специальные [[Нейроглия. Глия|глиальные клетки]].
 - Передача нервного импульса происходит от дендритов (или от тела клетки) к аксону
 Типы связи :
 1. аксо-соматическим: Аксон -> Тело
 2. аксо-дендритический: аксон ->дендритами
 3. аксо-аксональный: с другим аксоном (редкий только в ЦНС).
 - Концевые участки аксона — терминали — ветвятся и контактируют с другими нервными, мышечными или железистыми клетками.
+
+
+
+### Сигналы:
+- Афферентные
+- Эффеерентные
 </br>
 ---
 ###### zero-link </br>
