--- a/Психосоматика.md
+++ b/Психосоматика.md
@@ -2,23 +2,46 @@
 Tags: #
 
 ---
-# Title
+# Причины:
+- Перегрузка из головы выбрасывается на ЖКТ и тело
+- В психосоматике болезнь рассматривается как реакция тела на обстоятельства жизни. Тело старается помочь. Важно понимать эту логику, чтобы организм сам отключил этот процесс, и можно было свести лекарственную помощь к минимуму.
+- Если в случае проблемы психика находит модель выхода из [[Стресс]]а через [[Эмоции]](слезы, крик бегство и тд), человек сделает всё, что хотел сделать, то болезни не случается. Ничего не сдержано, не оставлено на потом. 
+`Опасные эмоции: Зависть; обида; чувство вины`
+- Если возможности отреагировать нет и нет решения на психическом уровне, то организм включает режим выживания в стрессе.  Пока для психики конфликт не разрешён, тело наращивает/уплотняет ткани, увеличивает кровообращение или выработку в-в/гормонов и т.д. Другими словами, производит изменения в теле, которые помогают человеку преодолевать трудности эффективнее. Возможные реакции тела: 
+	- изолированность, не с кем обсудить ситуацию или только я один страдаю от этого.
+	- драматичность ситуации, она переживается очень ярко, считается чем-то ужасным, невозможным и т.д.
+	- Дальше пойдёт процесс восстановления с возможным обострением(эпикризисом). Часть болезней и являются таким обострением после естественного разрешения конфликта.
+
+1. [[Стресс]] от жизненных ситуаций, напряжение, которые дают проявиться болезни. Это первый, важнейший момент. Как катализатор. Рвется там где тонко.
+2. Трек — это ассоциации закрепленные у нас в мозге. Треки могут напоминать и о хорошем, и о плохом. Например, кто-то ел яблоко и ему сказали какую-то неприятную новость. С тех пор аромат или вкус яблока может запустить стрессовую реакцию у тела и «включать» болезнь, даже если никаких дурных новостей нет. Поэтому важно не только проработать стрессовый момент, но и показать и телу, и сознанию, что тот момент давно в прошлом, и реакция не нужна. То есть убрать трэки. С пищевыми треками могут помочь диеты напр. [[FODMAP]]
+- Почему так происходит [[Быть в моменте#^9cf3df|мозг не знает что такое прошлое и будущее]] он не разделяет такие понятия, он живет в настоящем, особенно то что касается базовых эмоции и реакции. Бей или беги.
+3. **Принятие**. У страха глаза велики. Далее нам приходится признать, что мы больны и иметь с этим дело...  Ко всему этому добавляются переживания на тему болезни. Иногда она бывает больше, чем первая. К этому пункту относятся различные переживания из общения с врачами и больницами, необходимость делать какие-то процедуры, госпитализация, страхи от прогнозов. А чего можно начитаться в интернете? Поэтому в момент болезни и выздоровления так важно бережное и спокойное отношение к себе, больше аналитики работа с психологами [[КПТ|метод КПТ позволяет избегать расстройства вызванные нелогичными или нецелесообразными мыслями и убеждениями человека]]
+4. Вторичная выгода.  Это то выгодное состояние, которое дает болезнь. Да, сама болезнь страдание. Но тогда муж/дети  обратят внимание, станут заботиться. Тогда не придется идти в школу/ на работу и терпеть агрессивного начальника. Очень ярко это проявляется в болезни детей (тогда мы работаем со стрессами мамы, они отражаются на ребенке, примерно до 7-9 лет). Какая я буду мама, если ребенок болеет? Я мобилизуюсь, буду хорошей мамой, упорной. Посмотрите, какая я внимательная и старательная, мне сочувствуют. Это проявляется на бессознательном уровне. Эти чувства бывает трудно признавать, за ними могут также скрываться довольно болезненные истории.
+---
+
+# Теория Хаммера:
 ### Конфликт идентичности
 - Сложность выбора. Сложность с определением стороны, не понимания какой частью общества, стай, системы ты являешься.
 	- У ребенка разводятся родители сложность выбора с кем остаться
-	- Выбор лечения, университета.
+	- Выбор лечения, университета, друга, еды, территории
+- 
+
 ### Конфликт территориального страха (злости)
-- Покушения или угроза на территорию человека с преминением агрессии. Территория как физическая, так и метафорическая. 
+- Покушения или угроза на территорию человека с применением агрессии. Территория как физическая, так и метафорическая. 
 - Что то получить или от чего-то избавится ?
 	-   Разборка с соседями по даче за территорию участка.  
 
 Договорится со своим [[Бессознательное Подсознание]]
-# Очаги хаммера
+
+
+Толстый кишечник - на не возможность избавится от чего-то
+Тонкий кишечник - не переваривая ситуация
 
 ### Потеря близкого человек.
 - Представить этого человека рядом сказать ему: **"Я тебя люблю. Я за все тебя прощаю. Я за все прошу у тебя прощения. Я с тобой на всегда прощаюсь."**  (ком в горле должен растворится)
 
-### ЖКТ. Болезнь Крона, язвенный колит.
+### Проявления:
+ ЖКТ. Болезнь Крона, язвенный колит.
 - Проблема: кусковой конфликт не перевариваемой злости. 
 - Проблема циклично возвращается, потому что от нее нельзя избавится по каким-либо причинам. (Человек работает на не любимой работе т.к. имеется кредит и он боится уйти)
 - Понять от чего хочется уйти и почему нельзя или не получается этого сделать? Уйти или принять и переосмыслить
@@ -27,13 +50,14 @@ Tags: #
 
 - Период восстановления == периоду активной фазы (работы, решения конфилкта,) активной умственной деятельности. `Можно ускорить!!!???`
 
+---
 
 # Чикагская семерка
 - Франц Александер из Чикагского университета психоанализа.
 -  гипертония, язва, бронхиальная астма, Нейродермит (атопический дерматит), гипертония, Язвенная болезнь желудка и 12-перстной кишки, тиреотоксикоз (гиперфункция щитовидной железы), ревматоидный артрит, неспецифический язвенный колит, мигрень, псориаз, сахарный диабет 2 типа, ишемическая болезнь сердца, бесплодие, аллергический ринит
 - "К любой болезни - даже из "чикагской семерки" - есть генетическая предрасположенность, но проявиться она может от того, как человек реагирует на окружающее, как умеет проживать эмоцию. Но дело не только в эмоциях, - уверена Надежда Чумак. - Например, фактор развития ишемии - атеросклеротические бляшки сосудов сердца. Но если научить человека управлять эмоциями, реагировать экологично, более спокойно, а при этом он продолжит есть много жирных продуктов, этой работы будет недостаточно. Без коррекции питания проблему будет не решить. Другое дело, что может выясниться, почему человек ест так много жирного. Скорее всего, виноват в этом тоже эмоциональный фактор. Так что "идущий на поправку" после работы со специалистом по психосоматике обычно меняет и диету".
 
-
+---
 # New German Medicine
 1-й Биологический Закон: любое «заболевание», которое на самом деле является вполне логичной и важной реакцией организма на неожиданное конфликтное событие, является частью значимой Специальной Биологической Программы (СБП). Эта реакция на конфликт в организме происходит одновременно на трёх уровнях – в психике, в мозге и в органе.
 
@@ -48,19 +72,36 @@ Tags: #
 4-й Биологический Закон разъясняет благоприятную роль микробов в организме в их отношении ко всем типам тканей нашего тела при работе любой Специальной Биологической Программы (СБП).
 
 5-й Биологический Закон (квинтэссенция Новой Медицины): всякая «болезнь» – это часть значимой Специальной Биологической Программы Природы, созданной для оказания помощи организму (людей, животных, растений) для успешного разрешения биологического конфликта.
-</br>
----
-###### zero-link </br>
 
-</br>
 ---
-###### Links </br>
+# Профилактика:
+`Бей или Беги`
+[[Быть в моменте#^9cf3df|Мозг не знает что такое прошлое и будущее]] Тело подчиняется мозгу. Эмоции создают реакцию влияющие на тело, следовательно:  
+- физическая активность как имитация рептильных реакции на стресс. 
+- решение проблемы, выплеск энергии через резкие взрывные движения: `если позволяет здоровье`
+- Бег спринт, прыжки в длину.
+- Бокс или подобные боевые искусства
+- Соревновательные спортивные игры. Азарт. 
+- Ходьба и имитация: интенсивная Скандинавская; Цыгун; Медитация; 
+- Отпуск
+
+
+
+
+
+---
+###### zero-link
+
+
+---
+###### Links
 https://www.youtube.com/watch?v=hOC-awfCFnA&t=9s&ab_channel=Психосоматика
 
 Критика, факты, мифы:
 https://www.youtube.com/watch?v=UAsSWYpNy6s&ab_channel=ПостНаука
 Сюзанна О’Салливан  - Все в твоей голове
 
+- Дирк Хаммер, таблицы Луизы Хей, Жильбер Рено, Роберто Барнаи, Олег Матвеев и Михаил Филяев
 
  &emsp; | &emsp; 
 
