--- a/Тестостерон.md
+++ b/Тестостерон.md
@@ -12,6 +12,10 @@ Tags: #
 ## Свойства
 Синтез и секреция тестостерона регулируются лютеинизирующим и фолликулостимулирующими гормонами [гипофиза](https://wp.wiki-wiki.ru/wp/index.php/%D0%93%D0%B8%D0%BF%D0%BE%D1%84%D0%B8%D0%B7 "Гипофиз").
 В разных клинических лабораториях нормы содержания тестостерона могут изменяться в зависимости от метода определения. В большинстве лабораторий нормой тестостерона является 11-33 н[моль](https://wp.wiki-wiki.ru/wp/index.php/%D0%9C%D0%BE%D0%BB%D1%8C "Моль")/л у мужчин и 0,24—3,8 нмоль/л у женщин
+
+
+ФСГ отвечает за выработку тестостерона, если он низко то это может быть из-за стресса
+
 </br>
 ---
 ###### zero-link </br>
